# event-scheduler

./: .env.example  Dockerfile  README.md  docker-compose.yml  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
api/: Dockerfile  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 1fdbe2edda0c_create_tables.py  37d58052d2f6_create_events_table.py  68d553208aa4_create_tables.py  7fecbf857c26_create_tables.py  bc0ba7f06112_create_events_table.py
api/app/: main.py
api/app/config/: __init__.py  env.py
api/app/models/: __init__.py  event.py
api/app/routers/: __init__.py  event_router.py
api/app/schemas/: __init__.py  event.py
api/app/utils/: __init__.py  database.py
api/app/validation/: __init__.py  event_conflict.py
api/scripts/: init_db.bat
src/app/: globals.css  layout.tsx  page.tsx
src/components/: day-picker.tsx  edit-event-dialog.tsx  event-form.tsx  event-list.tsx
src/components/ui/: date-time-picker.tsx
src/hooks/: use-event.ts
src/lib/: axios-instance.ts
src/types/: event.ts
